# pyptine

./: CHANGELOG.md  COMPATIBILITY_SUMMARY.md  CONTRIBUTING.md  GITHUB_CHECKLIST.md  LICENSE  PROJECT_SUMMARY.md  PYTHON_3.14_COMPATIBILITY.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: advanced_filtering.py  basic_usage.py
src/pyine/: ine.py
src/pyine/cli/: main.py
src/pyine/client/: base.py  catalogue.py  data.py  metadata.py
src/pyine/models/: indicator.py  response.py
src/pyine/processors/: __init__.py  csv.py  dataframe.py  excel.py
src/pyine/search/: catalog.py
src/pyptine/cli/: main.py
src/pyptine/client/: metadata.py
tests/integration/: test_end_to_end.py
tests/test_cli/: test_commands.py
tests/test_client/: test_data.py  test_metadata.py
tests/test_search/: test_catalog.py
